# LunarFS

./: .gitignore  Cargo.toml  Dockerfile  LICENSING.md  README.md  build.rs  docker-compose.yml  docker-entrypoint.sh  install.sh
.github/workflows/: release.yml  windows.yml
.wrangler/cache/: pages.json
clients/mcp/: LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
clients/mcp/src/: config.ts  index.ts  remote.ts  schemas.ts  server.ts
clients/mcp/src/backend/: cli-runner.ts  http-client.ts  lunar-backend.ts  types.ts
clients/mcp/src/tools/: destroy.ts  fork-workspace.ts  grant-access.ts  list-workspaces.ts  mount.ts  push.ts
clients/mcp/test/: backend.test.ts  e2e.test.ts  remote.test.ts  tools.test.ts
docs/: agents.md  diff.md  macos-fuse.md  mount.md  windows-projfs.md
src/: acl.rs  autosync.rs  cas.rs  config.rs  core.rs  fs.rs  fuse.rs  index.rs  ingest.rs  lib.rs  live_sync.rs  main.rs  merge.rs  mount.rs  overlay.rs  overlayfs.rs  patch.rs  presign.rs  reconcile.rs  ref_advance.rs  remote.rs  resolve.rs  run_in_workspace.rs  serve.rs  store.rs  sync.rs  tree.rs  workspace.rs  ws_diff.rs
src/auth/: acl.rs  mod.rs  repo.rs  token.rs  verify.rs
src/backend/: linux.rs  macos.rs  mod.rs  projfs_logic.rs  windows.rs
src/fuse/: ops.rs  resolve.rs  translate.rs
src/fuse_t/: mod.rs
src/nfs/: client.rs  fs.rs  ids.rs  mod.rs  overlay_view.rs  serve.rs
test/multidevice/: Dockerfile  RESULTS.md  benchmark.sh  docker-compose.yml  run.sh  run_local.py  seed.sh  ws_diff_overlap.sh
test/multidevice/scenarios/: scenario1_fanout.sh  scenario2_disjoint.sh  scenario3_samefile.sh  scenario4_convergence.sh
tests/: adversarial.rs  agent_view.rs  config_resolve.rs  conflict_matrix.rs  diff_base_ref.rs  diff_detection.rs  local_mode_offline.rs  pen_smoke.rs  presign_bypass.rs  projfs_smoke.rs  put_ref_cas.rs  remote_hydration.rs  remote_roundtrip.rs  route_contract.rs  serve_lifecycle.rs  smoke_concurrency.rs  smoke_fuse_mount.rs  smoke_nfs_lifecycle.rs  smoke_r2_presign.rs  smoke_r2_serve.rs  smoke_real_mount.rs  smoke_remote.rs  smoke_ws_notify.rs  sync_live_e2e.rs
tests/common/: mod.rs
