[package]
name = "devdropbox"
version = "0.1.0"
edition = "2021"
description = "Instant copy-on-write workspaces for coding agents, backed by a BLAKE3 content-addressed store."
repository = "https://github.com/lunarfs/lunarfs"
homepage = "https://lunarfs.com"

[workspace]

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = ["github"]
installers = ["shell", "homebrew"]
tap = "lunarfs/homebrew-tap"
publish-jobs = ["homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"

[[bin]]
name = "lunar"
path = "src/main.rs"

[features]
default = []
fuse = []
hosted = []
# mount-nfs: loopback NFSv3 server backend (read-only, cross-platform).
# Pulls in nfsserve (MIT) and async-trait; the whole src/nfs module is gated here.
mount-nfs = ["dep:nfsserve", "dep:async-trait"]
# projfs: enable the Windows ProjFS backend.
# "dep:windows" activates the optional target-conditional windows dep on Windows.
# On macOS/Linux Cargo treats the dep: reference as a no-op (target not matched).
# If cargo build errors on macOS with "dep:windows", replace with projfs = [] and
# remove optional=true from the windows target dep (path taken: dep: approach).
projfs = ["dep:windows"]

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
object_store = { version = "0.11", features = ["aws"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"
getrandom = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "signal"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures = "0.3"
jsonwebtoken = "9"
nfsserve = { version = "0.11.0", optional = true }
async-trait = { version = "0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "user"] }
fuser = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
# windows-rs 0.58: Win32_Storage_ProjectedFileSystem gates the ProjFS API surface;
# Win32_Foundation supplies HRESULT, BOOLEAN. GUID/PCWSTR come from windows::core
# (always included). optional=true so the projfs feature controls activation via dep:.
windows = { version = "=0.58.0", features = ["Win32_Storage_ProjectedFileSystem", "Win32_Foundation"], optional = true }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"
object_store = { version = "0.11", features = ["aws"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
